View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028529 | Open CASCADE | OCCT:Shape Healing | public | 2017-03-09 12:47 | 2017-09-29 16:28 |
Reporter | msv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028529: UnifySameDomain crashes on a shape with location | ||||
Description | When trying to unify the attached face with option '+b' the algorithm crashes. | ||||
Steps To Reproduce | restore face_to_unify.brep f unifysamedom f1 f +b | ||||
Tags | No tags attached. | ||||
Test case number | bugs heal bug28529 | ||||
|
Branch CR28529 has been created by nds. SHA-1: 25e59720d6afe0b76455f7a7a04e2be7f53fecb1 No new revisions were added by this update. |
|
Branch CR28529 has been updated by nds. SHA-1: 254ee7d8a23f1adc4679a17a79818be2862f137a Detailed log of new commits: Author: nds Date: Mon Jul 10 10:43:32 2017 +0300 0028529: UnifySameDomain crashes on a shape with location |
|
Branch CR28529 has been updated by nds. SHA-1: 234d5a5ad50e2783c18078ed9b4fd5dd968a859a Detailed log of new commits: Author: nds Date: Wed Jul 26 09:34:18 2017 +0300 Collecting Curve Location in addition to Curve Surface location. An identity location should not be used when restoring curve. |
|
Branch CR28529 has been updated by nds. SHA-1: fdc9ae80b00451efaac050456f698c7b114234fa Detailed log of new commits: Author: nds Date: Wed Jul 26 09:46:47 2017 +0300 # moving test case into bugs/heal. |
|
bug28529_face_to_unify.brep (269,461 bytes) |
|
Branch CR28529_1 has been created by nds. SHA-1: ffdbaa0a19af7d0edbc6733693538b7f9f9d5067 Detailed log of new commits: Author: nds Date: Mon Jul 10 10:43:32 2017 +0300 0028529: UnifySameDomain crashes on a shape with location In Gluing operation, collecting Location and Surface component of Curves on Surface. Later, using identity location for curve obtaining leads to the issue crash. |
|
Dear Mikhail could you please review modifications and load the issue BREP file in data repository. Thank you in advance, Natalia |
|
Remarks: - In the final commit message, always leave empty the second line. - Description is not clear. I propose the text: During gluing edges, when getting pcurve of an edge, consider the proper surface location. - Get rid of BRep_ListIteratorOfListOfCurveRepresentation in line 526. It is because you use BRep_Tool::CurveOnSurface method with index, which can be used as iteration variable. - The line 626 is extra; it is incorrect to use edge location instead of surface location. - In lines 668, 669 it is needed to use remembered location. Data file has been put in the public data repository. |
|
Branch CR28529_1 has been updated by nds. SHA-1: d3f32bb89d31e96ac3e36d2dccec581869ef2410 Detailed log of new commits: Author: nds Date: Wed Jul 26 12:30:27 2017 +0300 0028529: UnifySameDomain crashes on a shape with location During gluing edges, when getting pcurve of an edge, consider the proper surface location. |
|
Branch CR28529_2 has been created by nds. SHA-1: 7813f0cf6fadbbc26f34524af709c7ca5cb4465a Detailed log of new commits: Author: nds Date: Mon Jul 10 10:43:32 2017 +0300 0028529: UnifySameDomain crashes on a shape with location During gluing edges, when getting pcurve of an edge, consider the proper surface location. |
|
Jenkins result in the next path: http://jenkins-test-10.nnov.opencascade.com/view/CR28529_2-master-NDS/ |
|
Again: - The line 626 is extra; it is incorrect to use edge location instead of surface location. |
|
Branch CR28529_2 has been updated by msv. SHA-1: 0181de97b20b4c7270460776485db0f7d57196b2 Detailed log of new commits: Author: msv Date: Wed Jul 26 17:17:08 2017 +0300 #Follow remark |
|
Dear BugMaster, Branch CR28529_2 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 0181de97b20b4c7270460776485db0f7d57196b2 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 8 (8 on master) Windows: 0 (0 on master) MacOS: 2 (2 on master) Regressions/Differences: Not detected Testing cases: bugs heal bug28529 - OK http://occt-tests/CR28529_2-master-NDS-OCCT/Debian70-64/bugs/heal/bug28529.html http://occt-tests/CR28529_2-master-NDS-OCCT/Windows-64-VC10/bugs/heal/bug28529.html Testing on Linux: Total MEMORY difference: 93096776 / 92060122 [+1.13%] Total CPU difference: 19146.740000000154 / 19421.550000000127 [-1.41%] Testing on Windows: Total MEMORY difference: 59120696 / 59120758 [-0.00%] Total CPU difference: 18057.958155398846 / 17810.05696629893 [+1.39%] |
|
Dear BugMaster, Please integrate branch CR28529_2 into the occt git-repository master. |
|
Branch CR28529 has been deleted by kgv. SHA-1: fdc9ae80b00451efaac050456f698c7b114234fa |
|
Branch CR28529_1 has been deleted by kgv. SHA-1: d3f32bb89d31e96ac3e36d2dccec581869ef2410 |
|
Branch CR28529_2 has been deleted by kgv. SHA-1: 0181de97b20b4c7270460776485db0f7d57196b2 |
occt: master fbfdf61a 2017-07-10 07:43:32 Committer: bugmaster Details Diff |
0028529: UnifySameDomain crashes on a shape with location During gluing edges, when getting pcurve of an edge, consider the proper surface location. |
Affected Issues 0028529 |
|
mod - src/ShapeUpgrade/ShapeUpgrade_UnifySameDomain.cxx | Diff File | ||
add - tests/bugs/heal/bug28529 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-03-09 12:47 | msv | New Issue | |
2017-03-09 12:47 | msv | Assigned To | => msv |
2017-03-09 12:47 | msv | File Added: face_to_unify.brep | |
2017-06-16 11:19 | msv | Assigned To | msv => nds |
2017-06-16 11:19 | msv | Status | new => assigned |
2017-07-10 10:42 | git | Note Added: 0068143 | |
2017-07-10 10:43 | git | Note Added: 0068144 | |
2017-07-20 13:00 | msv | Target Version | 7.2.0 => 7.3.0 |
2017-07-24 09:55 | msv | Target Version | 7.3.0 => 7.2.0 |
2017-07-26 09:34 | git | Note Added: 0068702 | |
2017-07-26 09:46 | git | Note Added: 0068703 | |
2017-07-26 09:47 | nds | File Deleted: face_to_unify.brep | |
2017-07-26 09:48 | nds | File Added: bug28529_face_to_unify.brep | |
2017-07-26 09:55 | git | Note Added: 0068704 | |
2017-07-26 09:59 | nds | Note Added: 0068705 | |
2017-07-26 09:59 | nds | Assigned To | nds => msv |
2017-07-26 10:00 | nds | Status | assigned => resolved |
2017-07-26 11:00 | msv | Note Added: 0068706 | |
2017-07-26 11:00 | msv | Assigned To | msv => nds |
2017-07-26 11:00 | msv | Status | resolved => assigned |
2017-07-26 12:30 | git | Note Added: 0068714 | |
2017-07-26 12:35 | git | Note Added: 0068717 | |
2017-07-26 15:30 | nds | Note Added: 0068729 | |
2017-07-26 15:31 | nds | Assigned To | nds => msv |
2017-07-26 15:31 | nds | Status | assigned => resolved |
2017-07-26 16:37 | msv | Note Added: 0068737 | |
2017-07-26 17:17 | git | Note Added: 0068745 | |
2017-07-27 11:12 | msv | Assigned To | msv => bugmaster |
2017-07-27 11:12 | msv | Status | resolved => reviewed |
2017-07-27 11:44 |
|
Assigned To | bugmaster => apv |
2017-07-27 12:13 |
|
Test case number | => bugs heal bug28529 |
2017-07-27 12:16 |
|
Note Added: 0068778 | |
2017-07-27 12:16 |
|
Assigned To | apv => bugmaster |
2017-07-27 12:16 |
|
Status | reviewed => tested |
2017-07-27 12:16 |
|
Note Added: 0068779 | |
2017-07-28 17:18 | bugmaster | Changeset attached | => occt master fbfdf61a |
2017-07-28 17:18 | bugmaster | Status | tested => verified |
2017-07-28 17:18 | bugmaster | Resolution | open => fixed |
2017-07-31 17:46 | git | Note Added: 0068945 | |
2017-07-31 17:46 | git | Note Added: 0068946 | |
2017-07-31 17:46 | git | Note Added: 0068947 | |
2017-09-29 16:17 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:28 |
|
Status | verified => closed |