0028529: UnifySameDomain crashes on a shape with location

During gluing edges, when getting pcurve of an edge, consider the proper surface location.